--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         </div>
     </nav>
 
-    <div id="ganadores" class="carousel slide">
+    <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/OPE.jpg" class="d-block w-100" alt="Oppenheimer">
+                <img src="images/OPE.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="images/BARB.jpg" class="d-block w-100" alt="Barbie">
+                <img src="images/BARB.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="images/POOR.jpg" class="d-block w-100" alt="Poor Things">
+                <img src="images/POOR.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
